--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       rel="stylesheet"
     />
 
+    <!-- Feather Icons -->
+    <script src="https://unpkg.com/feather-icons"></script>
+
     <!-- My Style -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
