Add navbar Bikin Dokumen

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Navbar start -->
+    <nav class="navbar">
+      <a href="#" class="navbar-logo">Bikin <span>Dokumen</span>.</a>
+    </nav>
+
+    <!-- Navbar end -->
+
+    <!-- Feather Icons -->
+
     <script>
       feather.replace();
     </script>
