--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     <!-- Navbar start -->
     <nav class="navbar">
       <a href="#" class="navbar-logo">Bikin <span>Dokumen</span>.</a>
+      <div class="navbar-nav">
+        <a href="#">Home</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Kontak</a>
+      </div>
+
+      <div class="navbar-extra">
+        <a href="#" id="search"><i data-feather="search"></i></a>
+        <a href="#" id="search"><i data-feather="search"></i></a>
+      </div>
     </nav>
 
     <!-- Navbar end -->
