Commit: Add new javascript file

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
     <!-- Navbar end -->
 
     <!-- Feather Icons -->
-
     <script>
       feather.replace();
     </script>
+
+    <!-- My Javascript -->
+    <script src="js/script.js"></script>
   </body>
 </html>
