1. Update navbar home 2. Add hero section 3. Add header backgorund image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
       <a href="#" class="navbar-logo">Bikin <span>Dokumen</span>.</a>
       <div class="navbar-nav">
-        <a href="#">Home</a>
+        <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="#menu">Menu</a>
         <a href="#contact">Kontak</a>
@@ -39,6 +39,21 @@
     </nav>
 
     <!-- Navbar end -->
+
+    <!-- Hero Section start -->
+
+    <section class="hero" id="home">
+      <main class="content">
+        <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti
+          ducimus quaerat saepe fugiat amet harum vitae quas. Officia quam
+          consequatur praesentium explicabo rerum magni neque, fugiat doloremque
+          unde, perspiciatis voluptas.
+        </p>
+        <a href="#" class="cta">Beli Sekarang</a>
+      </main>
+    </section>
 
     <!-- Feather Icons -->
     <script>
